--- a/AuswertungundDiskussion.tex
+++ b/AuswertungundDiskussion.tex
@@ -1,1 +1,15 @@
 \section{Auswertung}
+
+\subsection{Seebeck-Koeffizient des Thermoelements}
+
+Um den Seebeck-Koeffizient des Thermoelements zu bestimmen kann eine Gleichung für zwei Materialien A und B und bei einem Temperaturgefälle von $T_2 - T_1$  aus Gleichung (\ref{}) hergeleitet werden. 
+\begin{equation}
+  U_{th} = \int_{T_1}^{T_2} \alpha_A~ \text{d}T - \int_{T_1}^{T_2} \alpha_B~ \text{d}T = \int_{T_1}^{T_2} = \int_{T_1}^{T_2} \alpha_{AB}~ \text{d}T
+\end{equation}
+Mit $\alpha_{AB} = \alpha_A \alpha_B$ vereinfacht sich das zu
+
+\begin{equation}
+U_{th} = \alpha_{AB} \cdot (T_2 - T_1)
+\end{equation}
+
+Trägt man die Temperaturdifferenz, welche in diesem Fall einfach die gemessene Temperatur gegen die gemessene Spannung auf so erhält man folgendes Diagramm.
