--- a/AuswertungundDiskussion.tex
+++ b/AuswertungundDiskussion.tex
@@ -2,7 +2,7 @@
 
 \subsection{Seebeck-Koeffizient des Thermoelements}
 
-Um den Seebeck-Koeffizient des Thermoelements zu bestimmen kann eine Gleichung für zwei Materialien A und B und bei einem Temperaturgefälle von $T_2 - T_1$  aus Gleichung (\ref{}) hergeleitet werden. 
+Um den Seebeck-Koeffizient des Thermoelements zu bestimmen kann die Gleichung für zwei Materialien A und B und bei einem Temperaturgefälle von $T_2 - T_1$  aus Gleichung (\ref{}) hergeleitet werden. 
 \begin{equation}
   U_{th} = \int_{T_1}^{T_2} \alpha_A~ \text{d}T - \int_{T_1}^{T_2} \alpha_B~ \text{d}T = \int_{T_1}^{T_2} = \int_{T_1}^{T_2} \alpha_{AB}~ \text{d}T
 \end{equation}
@@ -214,3 +214,6 @@ P = R \cdot I^2
 \end{equation}
 
 folgt. Die Peltier-Wärmeleistung verläuft linear, ... Des Weitern kann die Vermutung die aus Abbildung \ref{bi:Utversc} aufgestellt wurde, dass bei der Stromstärke von $I = 4$A die joulsche-Wärmeleistung stärker als die Peltier-Wärmeleistung steigt hat sich bestätigt. Während die Steigung der Peltier-Wärmeleistung konstant $\Pi = 10,615 \frac{\mathrm{W}}{\mathrm{A}} $ beträgt, hat die joulsche-Wärmeleistung am Punkt $I = 4$A eine Steigung von $27.74 \frac{\mathrm{W}}{\mathrm{A}}$ 
+
+\subsection{Seebeck-Koeffizient des Peltier Elements}
+
