--- a/AuswertungundDiskussion.tex
+++ b/AuswertungundDiskussion.tex
@@ -4,25 +4,25 @@
 
 Um den Seebeck-Koeffizient des Thermoelements zu bestimmen kann die Gleichung für zwei Materialien A und B und bei einem Temperaturgefälle von $T_2 - T_1$  aus Gleichung (\ref{}) hergeleitet werden. 
 \begin{equation}
-  U_{th} = \int_{T_1}^{T_2} \alpha_A~ \text{d}T - \int_{T_1}^{T_2} \alpha_B~ \text{d}T = \int_{T_1}^{T_2} = \int_{T_1}^{T_2} \alpha_{AB}~ \text{d}T
+  U_{th} = \int_{T_1}^{T_2} \alpha_A~ \text{d}T - \int_{T_1}^{T_2} \alpha_B~ \text{d}T = \int_{T_1}^{T_2} \alpha_{AB}~ \text{d}T
 \end{equation}
-Mit $\alpha_{AB} = \alpha_A \alpha_B$ vereinfacht sich das zu
+Mit $\alpha_{AB} = \alpha_A - \alpha_B$ vereinfacht sich das zu
 
 \begin{equation}
 U_{th} = \alpha_{AB} \cdot (T_2 - T_1)
 \label{gl:uth}
 \end{equation}
 
-Trägt man die Temperaturdifferenz, welche in diesem Fall einfach die gemessene Temperatur in Grad Celsius ist, da die Referenz Temperatur null grad Celsius betrug, gegen die gemessene Spannung auf, so ergibt sich Diagramm \ref{bi:Ut1}.
+Trägt man die Temperaturdifferenz, welche in diesem Fall einfach die gemessene Temperatur in Grad Celsius ist, da die Referenz Temperatur null Grad Celsius betrug, gegen die gemessene Spannung auf, so ergibt sich Diagramm \ref{bi:Ut1}.
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=\linewidth, keepaspectratio]{Bilder/Ut1.png}
-    \caption{Die Thermopannung gemessen in mV aufgetragen gegen die Temperaturdifferenz. Die Ausgleichgerade wurde mittels Numpy.polyfit ersten Grades erstellt. Die Grenzgeraden Mittels einer Funktion welche die Grenzeraden so legt, dass $\frac{2}{3}$ aller Punkte zwischen den beiden Grenzgeraden liegen. Alle drei Geraden laufen durch den Schwerpunkt.}
+    \caption{Die Thermopannung gemessen in mV aufgetragen gegen die Temperaturdifferenz. Die Ausgleichgerade wurde mittels Numpy.polyfit ersten Grades erstellt. Die Grenzgeraden wurde Mittels einer Funktion welche die Grenzeraden so legt, dass $\frac{2}{3}$ aller Punkte zwischen den beiden Grenzgeraden liegen, erstellt. Alle drei Geraden laufen durch den Schwerpunkt.}
      \label{bi:Ut1}
 \end{figure}
 
-Mit der Steigung der Ausgleichsgerade aus Tabelle \ref{tb:steig1} ergibt für das gegebene Thermoelement sich ein Seebeck-Koeffizient von 
+Mit der Steigung der Ausgleichsgerade aus Tabelle \ref{tb:steig1} ergibt sich für das gegebene Thermoelement  ein Seebeck-Koeffizient von 
 \begin{equation}
   \alpha_{\mathrm{AB}} = 4,49 \cdot 10^{-5} \frac{\mathrm{V}}{\mathrm{K}}
 \end{equation}
@@ -80,7 +80,7 @@ Stellt man den Zeitlichen Verlauf der Thermospannung $U_{\mathrm{th}}(t)$ für d
     \label{bi:Utversc}
 \end{figure}
 
-Der Sprung der Kurve von $I = 2,4 $ A bei ca $t = 80$s  lässt sich durch das Spannungsmessgerät erklären. Da dieses keine Spannungen unter |0,5| mV Messen kann, zeigt dieses bis zum Erreichen von $U_{\mathrm{th}} = -0,5$mV eine Spannung von  $U_{\mathrm{th}} = 0$mV  an und springt dann plötzlich auf von $U_{\mathrm{th}} = -0,5$ mV. Die beste Effektivkühlung der gemessenen Werte, erhält man bei einer Stromstärke von $I = 3,2 $ A. Dies liegt daran das bei einer größeren Stromstärke die Erwärmung durch den ohmschen Wiederstand stärker wächst als die Abkühlung durch das Peltier-Element. 
+Der Sprung der Kurve von $I = 2,4 $ A bei ca $t = 80$s  lässt sich durch das Spannungsmessgerät erklären. Da dieses keine Spannungen unter $\left|0,5\right|$ mV Messen kann, zeigt dieses bis zum Erreichen von $U_{\mathrm{th}} = -0,5$mV eine Spannung von  $U_{\mathrm{th}} = 0$mV  an und springt dann plötzlich auf von $U_{\mathrm{th}} = -0,5$ mV. Die beste Effektivkühlung der gemessenen Werte, erhält man bei einer Stromstärke von $I = 3,2 $ A. Dies liegt daran das bei einer größeren Stromstärke die Erwärmung durch den ohmschen Wiederstand stärker wächst als die Abkühlung durch das Peltier-Element. 
 
 Da das selbe Thermoelement wie bei der ersten Messung verwendet wurde und die Referenzthemperatur ebenfalls 0°C ist, kann $T_{\mathrm{O}}$ also die Temperatur am Oberseite des Peltier Element mit der gemessenen Thermopannung $U_{\mathrm{th}}$ errechnet Werden. Die Formel dafür
 
@@ -258,7 +258,7 @@ Nun soll der Seebeck-Koeffizient de Peltier Elements bestimmt werde. Hierführ m
 \end{table}
  
 
-Nun kann man den Peltier-Koeffiezient wie in Kapitel 4.1 bestimmen. Dafür wurde die Thermospannung $U_{\mathrm{Pe}}$ gegen die Temperaturdifferenz $T_{\mathrm{O,U}} - T_{\mathrm{ref}} = T_{\mathrm{O,U}}$, da $ T_{\mathrm{ref}} = 0°C $ist, aufgetragen. Das Ergebniss ist in Abbildung (\ref{letzepls}) zu sehen.
+Nun kann man den Peltier-Koeffiezient wie in Kapitel 4.1 bestimmen. Dafür wurde die Thermospannung $U_{\mathrm{Pe}}$ gegen die Temperaturdifferenz $T_{\mathrm{O,U}} - T_{\mathrm{ref}} = T_{\mathrm{O,U}}$, da $ T_{\mathrm{ref}} = 0°C $ist, aufgetragen. Zudem wurden die Ersten zwei Wertepaare nicht mit einbezogen, weil $U_{\mathrm{Pe}}$ bei diesen werten $> 5V$ ist und Somit nicht von dem Seebeck Effekt, sondern noch von der Angelegten Spannung stammt.  Das Ergebniss ist in Abbildung (\ref{letzepls}) zu sehen.
 
 \begin{figure}[H]
     \centering
@@ -301,4 +301,9 @@ Wobei der Fehler durch
 \begin{equation}
 \Delta\alpha_{\text{P},2} = \pm \left( \left| \frac{\partial\alpha_{\text{P},2}}{\partial\Pi} \right| \Delta\Pi \right) = \pm \frac{\Delta\Pi}{T} \approx \pm 0{,}27 \cdot 10^{-2} \frac{\text{V}}{\text{K}}
 \end{equation}
-gegeben ist. Somit überschneiden sich diese zwei Ergebnisse auch mit dem Maximalfehler um $0,05 \cdot 10^{-2} \frac{\text{V}}{\text{K}}$ nicht. 
+gegeben ist. Somit überschneiden sich diese zwei Ergebnisse auch mit dem Maximalfehler um $0,05 \cdot 10^{-2} \frac{\text{V}}{\text{K}}$ nicht. Zudem ist der Fehler des Seebeck-Koeffizent welcher mithilfe der Grafik erstellt wurde sehr größ, der relativ Fehler beträgt ca. 26\%. Der Verlauf der Punkte in Grafik \ref{tb:steig3} lässt auch eine Exponentielle Komponente vermuten. Möglich ist das wie in Kapitel 4.2 durch den fließenden Strom, der jetzt hier nicht gemessen wurde, joulsche Wärme entsteht, diese ist wie oben schon gezeigt quadratisch von der Stromstärke abhängig. Trotzdem befinden sich die zwei errechnetet Seebeck-Koeffizenten in der gleichen Größenordnung, der unterschied liegt bei einem Faktor von ca. 1,5, somit liegen beide Ergebnisse ingesamt auch in einer realistischen Größenordnung. Der Unterschied zum Seebeck-Koeffizent des Thermoelemts hingegen ist sehr groß der Faktor betragt hier ungefähr 1000, wobei der Seebeck-Koeffizent des Petier-Elements deutlich größer als der des Thermoelemts ist. Das beteutet das, dass Petier-Element deutlich effizienter Wärme in elektrische Spannung umzuwandeln kann. Wenn man die Gleichung 
+\begin{equation}
+\alpha_{\text{AB}} = \alpha_{\text{A}} - \alpha_{\text{B}}
+\end{equation}
+
+betrachtet heißt das zum einen das im Peltier-Element der unterschied der Seebeck-Koeffizenten der zwei Stogge tendenziell höher ist, zum anderen das der Stoff A tendenziell einen höhern Seebeck-Koeffizent als sein gegenstück vom Thermo-Element hatt. Der große Untscheid der Seebeck-Koeffizent beim Peltier-Element ergibt sinn, da es mit einer differenz der Fermienergie der Materialen arbeitet, welche nach Gleichung \ref{material_abhängig_seebeck}den Seebeck-Koeffizenten mitbestimmen. 
