--- a/Titelblatt.tex
+++ b/Titelblatt.tex
@@ -27,6 +27,7 @@
 \usepackage[labelfont=bf,textfont=normalfont]{caption}
 
 
+
 \fancyhf{}
 \fancyfoot[C]{\thepage}
 \thispagestyle{empty}
@@ -40,8 +41,9 @@
 \usepackage{graphicx}           
 
 
-\usepackage{ragged2e}         
-\RaggedRight
+\usepackage{ragged2e}
+\justifying         
+%\RaggedRight
 
 
 \newcommand{\Versuchnummer}{W9}                           %CHange iiit
